--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
+  background: linear-gradient(230deg, #080726, #080808);
   font: 14px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial,
     Helvetica, Geneva, sans-serif;
-  background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   -moz-osx-font-smoothing: grayscale;
@@ -49,14 +49,14 @@ body {
   background-size: 510px 120px;
 } */
 
-#container {
+/* #container {
   width: 1196px;
   padding: 48px 16px 32px;
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  clear: both;
-}
+  clear: both; 
+} */
 
 .question-result {
   padding-top: 16px;
@@ -67,4 +67,8 @@ body {
   width: 972px;
   padding-top: 24px;
   margin: 0 0 32px 224px;
+}
+
+a {
+  text-decoration: none;
 }
