--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  background: linear-gradient(230deg, #080726, #080808);
+  height: 100%;
+  background: linear-gradient(225deg, #080726, #080808);
   font: 14px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial,
     Helvetica, Geneva, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -59,7 +60,7 @@ body {
 } */
 
 .question-result {
-  padding-top: 16px;
+  padding-top: 5rem;
   font-size: 14px;
 }
 
