--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,43 +1,36 @@
 .container {
+  height: 1rem;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+
+  position: fixed;
+  top: 0;
   width: 100%;
-  padding-top: 0;
-  margin-top: 0;
   
-  nav{
-    width: 100%;
-    display: flex;
-    align-items: center;
+  padding: 1rem 3rem;
 
-    height: 2.4rem;
-    position: fixed;
-    z-index: 1;
+  background: #121317; 
 
-    background: #121317;  
-
-    padding-left: 2rem;
-
+  
   a {
-    display: inline-block;
-    padding: 0 0.5rem;
-
-    color: #FFE81F;
-
+    text-decoration: none;
+    color:  #FFE81F;
     transition: filter 0.2s, transform 0.2s;
+
+    &:hover {
+      filter: brightness(0.8);
+      transform: scale(1.03);
+    }
 
     &:first-child{
       margin-right: 4rem;
     }
 
     & + a {
-      margin-left: 2rem;
-    }
-
-    &:hover {
-      filter: brightness(0.8);
-      transform: scale(1.03);
+      margin-left: 5rem;
     }
   }
 }
-  
-}
-
