--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,17 +1,14 @@
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: space-around;
-
-  
-  
-  //align-items: center;
+  margin-top: 10rem;
 
   .textContent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
     color: #FFE81F;
 
@@ -20,22 +17,21 @@
     }
 
     div {
-      padding: 1rem 2rem;
+      padding: 0rem 2rem;
 
       h1 {
+        margin: 5rem 0;
         word-wrap: break-word;
-        font-size: 3rem;
+        font-size: 4rem;
       }
       h2 {
+        margin-top: 4rem;
         font-size: 1.8rem;
       }
-    }
-
-    
+    } 
   }
 
   img{
-    margin-top: 5rem;
     max-height: 500px;
     mix-blend-mode: overlay;
   }
