--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
+  overflow-y: hidden;
   background: linear-gradient(225deg, #080726, #080808);
   font: 14px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial,
     Helvetica, Geneva, sans-serif;
