--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,13 +1,41 @@
-body {
+* {
   margin: 0;
-  height: 100vh;
-  overflow-y: hidden;
-  background: linear-gradient(225deg, #080726, #080808);
+  padding: 0;
+  box-sizing: 0;
+}
+
+body {
+  max-width: 1420px;
+  min-height: 100vh;
+  overflow: hidden;
+  background: linear-gradient(225deg, #080726, #080808) no-repeat;
   font: 14px -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial,
     Helvetica, Geneva, sans-serif;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: none;
   -moz-osx-font-smoothing: grayscale;
+}
+
+
+@media(max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media(max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem 
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* .general-function {
