--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,8 +1,11 @@
 .container {
-  height: 100%;
+  margin: 5rem auto;
+  padding: 0 2rem;
+  overflow-x: hidden;
+
   display: flex;
-  justify-content: space-around;
-  margin-top: 10rem;
+  align-items: center;
+  justify-content: space-between;
 
   .textContent {
     display: flex;
@@ -20,12 +23,12 @@
       padding: 0rem 2rem;
 
       h1 {
-        margin: 5rem 0;
+        margin: 2rem 0;
         word-wrap: break-word;
         font-size: 4rem;
       }
       h2 {
-        margin-top: 4rem;
+        margin-top: 2rem;
         font-size: 1.8rem;
       }
     } 
@@ -35,7 +38,6 @@
     max-height: 500px;
     mix-blend-mode: overlay;
     filter: contrast(1.5);
-    
   }
   
 }
