--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: 1420px;
+  /* max-width: 1420px; */
   min-height: 100vh;
   overflow: hidden;
   background: linear-gradient(225deg, #080726, #080808) no-repeat;
@@ -36,6 +36,26 @@ body, input, textarea, select, button {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.react-modal-overlay{
+  background: rgba(0,0,0,0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.react-modal-content{
+  width: 80%;
+  max-width: 576px;
+  background: #EDF4F5;
+  padding: 3rem;
+  position: relative;
+  border-radius: 0.25rem;
 }
 
 /* .general-function {
