--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 5rem auto 0;
+  margin: 6rem auto 0;
   padding: 0 2rem;
   overflow-x: hidden;
   max-height: 90vh;
@@ -24,7 +24,7 @@
       padding: 0rem 2rem;
 
       h1 {
-        margin: 2rem 0;
+        margin: 3rem 0 5rem;
         word-wrap: break-word;
         font-size: 4rem;
       }
