reactive navbar and home screen added

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -16,16 +16,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 @media(max-width: 1080px) {
   html {
     font-size: 93.75%;
   }
 }
 
-@media(max-width: 720px) {
+@media(max-width: 760px) {
   html {
     font-size: 87.5%;
+  }
+  body {
+    background: linear-gradient(225deg, #120f52, #202020) no-repeat;
+    overflow-y: auto;
   }
 }
 
