--- a/src/pages/Home/home.module.scss
+++ b/src/pages/Home/home.module.scss
@@ -90,6 +90,8 @@
         max-height: 500px;
         mix-blend-mode: overlay;
         filter: brightness(1.2);
+        position: relative;
+        z-index: -1;
         
       }
     }
