--- a/src/components/SideMenu/sideMenu.module.scss
+++ b/src/components/SideMenu/sideMenu.module.scss
@@ -12,19 +12,24 @@
 
 .reactModalContent{
   overflow-y: auto;
-  margin-left: 60%;
-  max-width: 300px;
+  max-width: 500px;
+  min-width: 400px;
   height: 100%;
   background: #121317;
   padding: 1.4rem 2rem;
+  
   position: fixed;
+  left: 50%;
   z-index: 200;
   border-radius: 0.25rem;
-  transition: all 0.5s ease;
+  transition: all 0.5s;
 
   div {
     display: flex;
     flex-direction: column;
+    max-width: 150px;
+    overflow-wrap: break-word;
+    text-align: left;
 
     margin-top: 3rem;
     padding: 1rem;
